# the-finals-leaderboard.py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/the_finals_leaderboard/: __init__.py  _cache_old_leaderboards.py  _generate_stubs.py  api.py  caching.py  client.py  client.pyi  filtering.py  models.py
src/the_finals_leaderboard/cached_data/leaderboard/cb1/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/cb2/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/ob/crossplay/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/ob/psn/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/ob/steam/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/ob/xbox/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s1/crossplay/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s1/psn/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s1/steam/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s1/xbox/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s2/crossplay/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s2/psn/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s2/steam/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s2/xbox/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s3/crossplay/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s3original/crossplay/: data.json
src/the_finals_leaderboard/cached_data/leaderboard/s3worldtour/crossplay/: data.json
(+27 files in other folders)
